Revert "add PATCH /api/events/:id"
This reverts commit 4ce74d5cef1c620c06fec712d514f6ed86f9919f.
