# src/routes/events.js
@@ -8,6 +8,4 @@ router.get('/:id', eventsControllers.getEvent);
 
 router.get('/:id/related-events', eventsControllers.getRelatedEvents);
 
-router.patch('/:id', eventsControllers.updateEvent);
-
 module.exports = router;
